2012-08-19  zaki Smahi <zakaria08esi@gmail.com>

    	* launching the first release 0.5
		
2012-08-18  zaki Smahi <zakaria08esi@gmail.com>

    	* changes made on insall.rdf to validate the addon on mozilla
		